--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         </section>
         <section>
             <div id="section-container" class="grid grid-cols-4 gap-4">
+            </div>
 
+            <div id="no-message" class="hidden">
+                <h1 class="text-center text-5xl text-blue-400">Not found</h1>
             </div>
         </section>
         <!-- modal  -->
