--- a/shopping.html
+++ b/shopping.html
@@ -6,9 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping!</title>
+    <!-- daisiUi -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="p-4">
+
+    <header>
+        <div class="form-control w-1/2 max-w-xs mx-auto">
+            <label class="label">
+                <span class="label-text">search your products</span>
+                <span class="label-text-alt">press <kbd class="kbd kbd-sm">enter</kbd></span>
+            </label>
+            <input type="text" placeholder="search here" class="input input-bordered w-full max-w-xs" />
+
+        </div>
+    </header>
+    <main>
+        <div class="flex">
+
+            <!-- menu -->
+            <div class="flex-none">
+                <ul class="menu w-56 bg-secondary text-secondary-content p-2 rounded-box">
+                    <li><a>Item 1</a></li>
+                    <li><a>Item 2</a></li>
+                    <li><a>Item 3</a></li>
+                </ul>
+            </div>
+            <!-- product  -->
+            <div class="grow">
+                02
+            </div>
+
+        </div>
+    </main>
 
     <script src="shopping.js"></script>
 </body>
